force-app/main/default/objects/Valuation__c/fields/No_of_Dependants__c.field-meta.xml
<CustomField>
    <fullName>No_of_Dependants__c</fullName>
    <label>No. of Dependants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>