force-app/main/default/objects/Valuation__c/fields/No_of_Employees_Seen__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employees_Seen__c</fullName>
    <label>No. of Employees Seen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>