force-app/main/default/objects/Valuation__c/fields/No_of_Flats_on_Floor__c.field-meta.xml
<CustomField>
    <fullName>No_of_Flats_on_Floor__c</fullName>
    <label>No of Flats on Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>