force-app/main/default/objects/Valuation__c/fields/No_of_Lifts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Lifts__c</fullName>
    <label>No of Lifts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>