force-app/main/default/objects/Valuation__c/fields/No_of_Wings__c.field-meta.xml
<CustomField>
    <fullName>No_of_Wings__c</fullName>
    <label>No of Wings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>