force-app/main/default/objects/Valuation__c/fields/Occupant_Name__c.field-meta.xml
<CustomField>
    <fullName>Occupant_Name__c</fullName>
    <label>Occupant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>