force-app/main/default/objects/Valuation__c/fields/Occupied_by__c.field-meta.xml
<CustomField>
    <fullName>Occupied_by__c</fullName>
    <label>Occupied by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>