force-app/main/default/objects/Valuation__c/fields/Occupied_Since__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Since__c</fullName>
    <label>Occupied Since</label>
    <type>Date</type>
</CustomField>