force-app/main/default/objects/Valuation__c/fields/Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Office_Address__c</fullName>
    <label>Office Address</label>
    <type>TextArea</type>
</CustomField>