force-app/main/default/objects/Valuation__c/fields/Office_CPV_Comments__c.field-meta.xml
<CustomField>
    <fullName>Office_CPV_Comments__c</fullName>
    <label>Office CPV Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>