force-app/main/default/objects/Valuation__c/fields/Office_Landmark__c.field-meta.xml
<CustomField>
    <fullName>Office_Landmark__c</fullName>
    <label>Landmark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>