force-app/main/default/objects/Valuation__c/fields/Office_Locality__c.field-meta.xml
<CustomField>
    <fullName>Office_Locality__c</fullName>
    <label>Office Locality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Gala</fullName>
            </value>
            <value>
                <fullName>Godown</fullName>
            </value>
            <value>
                <fullName>Independent Office</fullName>
            </value>
            <value>
                <fullName>Resi-cum-office</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
            <value>
                <fullName>Showroom</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>