force-app/main/default/objects/Valuation__c/fields/Office_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Office_Ownership__c</fullName>
    <label>Office Ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>