force-app/main/default/objects/Valuation__c/fields/OGL__c.field-meta.xml
<CustomField>
    <fullName>OGL__c</fullName>
    <label>OGL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>