force-app/main/default/objects/Valuation__c/fields/Other_Activity_Check__c.field-meta.xml
<CustomField>
    <fullName>Other_Activity_Check__c</fullName>
    <formula>AND(RecordType_Name__c != &apos;RCU&apos;,
ISPICKVAL(Vendor_Status__c, &apos;Completed&apos;),
NOT(ISBLANK(TEXT(Result__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Activity Check</label>
    <type>Checkbox</type>
</CustomField>