force-app/main/default/objects/Valuation__c/fields/Other_Signboard__c.field-meta.xml
<CustomField>
    <fullName>Other_Signboard__c</fullName>
    <label>Other Signboard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>