force-app/main/default/objects/Valuation__c/fields/Overall_Maintenance_Level__c.field-meta.xml
<CustomField>
    <fullName>Overall_Maintenance_Level__c</fullName>
    <label>Overall Maintenance Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>