force-app/main/default/objects/Valuation__c/fields/Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Status__c</fullName>
    <label>Ownership Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>