force-app/main/default/objects/Valuation__c/fields/Percentage_of_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Occupancy__c</fullName>
    <label>Percentage of Occupancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>