force-app/main/default/objects/Valuation__c/fields/Person_Met_Designation__c.field-meta.xml
<CustomField>
    <fullName>Person_Met_Designation__c</fullName>
    <label>Person Met Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>