force-app/main/default/objects/Valuation__c/fields/Photo_Url__c.field-meta.xml
<CustomField>
    <fullName>Photo_Url__c</fullName>
    <formula>HYPERLINK(
 Applicant_URL__c ,&apos;Click to open !!&apos;,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Photo</label>
    <type>Text</type>
</CustomField>