force-app/main/default/objects/Valuation__c/fields/Pincode1__c.field-meta.xml
<CustomField>
    <fullName>Pincode1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pincode</label>
    <referenceTo>Pincode__c</referenceTo>
    <relationshipLabel>Activity</relationshipLabel>
    <relationshipName>Activity</relationshipName>
    <type>Lookup</type>
</CustomField>