force-app/main/default/objects/Valuation__c/fields/Plot_Area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Plot_Area_Sqft__c</fullName>
    <label>Plot Area (Sqft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>