force-app/main/default/objects/Valuation__c/fields/Plot_Demarcated__c.field-meta.xml
<CustomField>
    <fullName>Plot_Demarcated__c</fullName>
    <label>Plot Demarcated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>