force-app/main/default/objects/Valuation__c/fields/Plot_No__c.field-meta.xml
<CustomField>
    <fullName>Plot_No__c</fullName>
    <label>Plot No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>