force-app/main/default/objects/Valuation__c/fields/Political_Link_or_Reference__c.field-meta.xml
<CustomField>
    <fullName>Political_Link_or_Reference__c</fullName>
    <label>Political Link or Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>