force-app/main/default/objects/Valuation__c/fields/Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant__c</fullName>
    <formula>Loan_Application__r.Loan_Applicant__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant</label>
    <type>Text</type>
</CustomField>