force-app/main/default/objects/Valuation__c/fields/Property_Age__c.field-meta.xml
<CustomField>
    <fullName>Property_Age__c</fullName>
    <label>Property Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>