force-app/main/default/objects/Valuation__c/fields/Property_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Property_Occupancy__c</fullName>
    <label>Property Occupancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>