force-app/main/default/objects/Valuation__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Loan_Application__c</field>
            <operation>equals</operation>
            <valueField>Loan_Applicant__c.Loan_Application__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>Activity (Property Owner)</relationshipLabel>
    <relationshipName>Activity</relationshipName>
    <type>Lookup</type>
</CustomField>