force-app/main/default/objects/Valuation__c/fields/Property_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner_Name__c</fullName>
    <label>Property Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>