force-app/main/default/objects/Valuation__c/fields/Property_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Sub_Type__c</fullName>
    <label>Property Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>