force-app/main/default/objects/Valuation__c/fields/Property_Usage__c.field-meta.xml
<CustomField>
    <fullName>Property_Usage__c</fullName>
    <label>Property Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>