force-app/main/default/objects/Valuation__c/fields/Quality_of_Construction__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Construction__c</fullName>
    <label>Quality of Construction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>