force-app/main/default/objects/Valuation__c/fields/Rate_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Rate_sq_ft__c</fullName>
    <label>Rate (sq.ft.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>