force-app/main/default/objects/Valuation__c/fields/RC_Copy_Attachment__c.field-meta.xml
<CustomField>
    <fullName>RC_Copy_Attachment__c</fullName>
    <label>RC Copy (Attachment)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>