force-app/main/default/objects/Valuation__c/fields/Rcu_Activity_Check__c.field-meta.xml
<CustomField>
    <fullName>Rcu_Activity_Check__c</fullName>
    <formula>AND(RecordType_Name__c = &apos;RCU&apos;, OR (ISPICKVAL(Status__c, &apos;Sampled&apos;), 
								ISPICKVAL(Status__c, &apos;Screened&apos;)),  
												ISPICKVAL(Vendor_Status__c, &apos;Completed&apos;),
												NOT(ISBLANK(TEXT(Result__c)))
								)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rcu Activity Check</label>
    <type>Checkbox</type>
</CustomField>