force-app/main/default/objects/Valuation__c/fields/RCU_Manager__c.field-meta.xml
<CustomField>
    <fullName>RCU_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Valuation</relationshipName>
    <type>Lookup</type>
</CustomField>