force-app/main/default/objects/Valuation__c/fields/RCU_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>RCU_Manager_Name__c</fullName>
    <formula>RCU_Manager__r.FirstName + &apos; &apos; + RCU_Manager__r.MiddleName + &apos; &apos; + RCU_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RCU Manager Name</label>
    <type>Text</type>
</CustomField>