force-app/main/default/objects/Valuation__c/fields/Reason_for_rejecting_the_report__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_rejecting_the_report__c</fullName>
    <label>Reason for rejecting the report</label>
    <type>TextArea</type>
</CustomField>