force-app/main/default/objects/Valuation__c/fields/Recommended_Negative_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Negative_Reason__c</fullName>
    <label>Recommended Negative Reason</label>
    <type>TextArea</type>
</CustomField>