force-app/main/default/objects/Valuation__c/fields/Recommended_Positive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Positive_Reason__c</fullName>
    <label>Recommended Positive Reason</label>
    <type>TextArea</type>
</CustomField>