force-app/main/default/objects/Valuation__c/fields/Referred_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Credit__c</fullName>
    <label>Referred to Credit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>