force-app/main/default/objects/Valuation__c/fields/Relationship_Of_The_Person_Met_At_Site__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Of_The_Person_Met_At_Site__c</fullName>
    <label>Relationship Of The Person Met At Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>