force-app/main/default/objects/Valuation__c/fields/Relationship_with_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Borrower__c</fullName>
    <label>Relationship with Borrower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>