force-app/main/default/objects/Valuation__c/fields/Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Status__c</fullName>
    <label>Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear &amp; Marketable</fullName>
            </value>
            <value>
                <fullName>Scrutiny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>