force-app/main/default/objects/Valuation__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Evaluation</fullName>
            </value>
            <value>
                <fullName>Title Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>