force-app/main/default/objects/Valuation__c/fields/Residence_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Residence_Ownership__c</fullName>
    <label>Residence Ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>