force-app/main/default/objects/Valuation__c/fields/Residual_Age__c.field-meta.xml
<CustomField>
    <fullName>Residual_Age__c</fullName>
    <label>Residual Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>