force-app/main/default/objects/Valuation__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Refer to credit</fullName>
            </value>
            <value>
                <fullName>Refer to business</fullName>
            </value>
            <value>
                <fullName>Profile decline</fullName>
            </value>
            <value>
                <fullName>Document decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>