force-app/main/default/objects/Valuation__c/fields/ResultFormula__c.field-meta.xml
<CustomField>
    <fullName>ResultFormula__c</fullName>
    <formula>TEXT(Result__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResultFormula</label>
    <type>Text</type>
</CustomField>