force-app/main/default/objects/Valuation__c/fields/Round_Off_Total__c.field-meta.xml
<CustomField>
    <fullName>Round_Off_Total__c</fullName>
    <label>Round Off Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>