force-app/main/default/objects/Valuation__c/fields/Sanction_Authority_Name__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Authority_Name__c</fullName>
    <label>Sanction Authority Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>