force-app/main/default/objects/Valuation__c/fields/Seller_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_First_Name__c</fullName>
    <label>Seller First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>