force-app/main/default/objects/Valuation__c/fields/Seller_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Middle_Name__c</fullName>
    <label>Seller Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>