force-app/main/default/objects/Valuation__c/fields/Seller_PAN_No__c.field-meta.xml
<CustomField>
    <fullName>Seller_PAN_No__c</fullName>
    <label>Seller PAN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>