force-app/main/default/objects/Valuation__c/fields/Society_Registered__c.field-meta.xml
<CustomField>
    <fullName>Society_Registered__c</fullName>
    <label>Society Registered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>