force-app/main/default/objects/Valuation__c/fields/Stability_Working_Since_in_years__c.field-meta.xml
<CustomField>
    <fullName>Stability_Working_Since_in_years__c</fullName>
    <label>Stability/Working Since ( in years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>