force-app/main/default/objects/Valuation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>RCU Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Query Raised</fullName>
            </value>
            <value>
                <fullName>Screened</fullName>
            </value>
            <value>
                <fullName>Sampled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>