force-app/main/default/objects/Valuation__c/fields/Stay_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Stay_Confirmed__c</fullName>
    <label>Stay Confirmed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>