force-app/main/default/objects/Valuation__c/fields/Stock_Seen_Level_of_Business_Activity__c.field-meta.xml
<CustomField>
    <fullName>Stock_Seen_Level_of_Business_Activity__c</fullName>
    <label>Stock Seen &amp; Level of Business Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>