force-app/main/default/objects/Valuation__c/fields/Stocks__c.field-meta.xml
<CustomField>
    <fullName>Stocks__c</fullName>
    <label>Stocks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>