force-app/main/default/objects/Valuation__c/fields/Supervisor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Comments__c</fullName>
    <label>Supervisor Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>