force-app/main/default/objects/Valuation__c/fields/Suspicious_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Suspicious_Triggers__c</fullName>
    <label>Suspicious Triggers</label>
    <length>225</length>
    <type>Text</type>
</CustomField>