force-app/main/default/objects/Valuation__c/fields/Taluka__c.field-meta.xml
<CustomField>
    <fullName>Taluka__c</fullName>
    <label>Taluka</label>
    <length>255</length>
    <type>Text</type>
</CustomField>