force-app/main/default/objects/Valuation__c/fields/Total_Appraised_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Appraised_Value__c</fullName>
    <label>Total Appraised Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>