force-app/main/default/objects/Valuation__c/fields/Total_Family_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Family_Members__c</fullName>
    <label>Total Family Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>