force-app/main/default/objects/Valuation__c/fields/TPCNeighbour_Check_Done__c.field-meta.xml
<CustomField>
    <fullName>TPCNeighbour_Check_Done__c</fullName>
    <label>TPC/Neighbour Check Done</label>
    <length>255</length>
    <type>Text</type>
</CustomField>