force-app/main/default/objects/Valuation__c/fields/Type_of_Entity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Entity__c</fullName>
    <label>Type of Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>