force-app/main/default/objects/Valuation__c/fields/Type_of_Job__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Job__c</fullName>
    <label>Type of Job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>