force-app/main/default/objects/Valuation__c/fields/Type_Of_Structure__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Structure__c</fullName>
    <label>Type Of Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kaccha</fullName>
            </value>
            <value>
                <fullName>Pucca</fullName>
            </value>
            <value>
                <fullName>Semi-Pucca</fullName>
            </value>
            <value>
                <fullName>Semi-Kaccha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>