force-app/main/default/objects/Valuation__c/fields/Unit_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Unit_Configuration__c</fullName>
    <label>Unit Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>