force-app/main/default/objects/Valuation__c/fields/Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_No__c</fullName>
    <label>Unit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>