force-app/main/default/objects/Valuation__c/fields/Uploaded_Documents__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Documents__c</fullName>
    <label>Uploaded Documents</label>
    <type>TextArea</type>
</CustomField>