force-app/main/default/objects/Valuation__c/fields/Valuation_On__c.field-meta.xml
<CustomField>
    <fullName>Valuation_On__c</fullName>
    <label>Valuation On</label>
    <type>Date</type>
</CustomField>