force-app/main/default/objects/Valuation__c/fields/Vehicle_if_any__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_if_any__c</fullName>
    <label>Vehicle(if any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>