force-app/main/default/objects/Valuation__c/fields/Vehicle_Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make_Model__c</fullName>
    <formula>Vehicle__r.Make__c +&apos;  &apos;+ Vehicle__r.Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Make/Model</label>
    <type>Text</type>
</CustomField>