force-app/main/default/objects/Valuation__c/fields/Vehicle_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner_Name__c</fullName>
    <formula>Vehicle__r.Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Owner Name</label>
    <type>Text</type>
</CustomField>