force-app/main/default/objects/Valuation__c/fields/Vehicle_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Reg_No__c</fullName>
    <formula>Vehicle__r.Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Reg. No.</label>
    <type>Text</type>
</CustomField>