force-app/main/default/objects/Valuation__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activity</relationshipName>
    <type>Lookup</type>
</CustomField>