force-app/main/default/objects/Valuation__c/fields/Vendor_Comment__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Comment__c</fullName>
    <label>Vendor Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>