force-app/main/default/objects/Valuation__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <formula>Vendor__r.FirstName +&quot; &quot;+ Vendor__r.MiddleName +&quot; &quot;+  Vendor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Name</label>
    <type>Text</type>
</CustomField>