force-app/main/default/objects/Valuation__c/fields/Vendor_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Status__c</fullName>
    <defaultValue>&apos;Pending&apos;</defaultValue>
    <label>Vendor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>