force-app/main/default/objects/Valuation__c/fields/Visited_by__c.field-meta.xml
<CustomField>
    <fullName>Visited_by__c</fullName>
    <label>Visited by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>