force-app/main/default/objects/Valuation__c/recordTypes/Office_FI.recordType-meta.xml
<RecordType>
    <fullName>Office_FI</fullName>
    <active>true</active>
    <label>Office FI</label>
</RecordType>