force-app/main/default/objects/Valuation__c/recordTypes/Permanent_FI.recordType-meta.xml
<RecordType>
    <fullName>Permanent_FI</fullName>
    <active>true</active>
    <label>Permanent FI</label>
</RecordType>