force-app/main/default/objects/Valuation__c/recordTypes/Property_Valuation.recordType-meta.xml
<RecordType>
    <fullName>Property_Valuation</fullName>
    <active>true</active>
    <label>Property Valuation</label>
</RecordType>