force-app/main/default/objects/Valuation__c/recordTypes/RCU.recordType-meta.xml
<RecordType>
    <fullName>RCU</fullName>
    <active>true</active>
    <label>RCU</label>
</RecordType>