force-app/main/default/objects/Valuation__c/recordTypes/RCU_Vendor.recordType-meta.xml
<RecordType>
    <fullName>RCU_Vendor</fullName>
    <active>true</active>
    <label>RCU Vendor</label>
</RecordType>