force-app/main/default/objects/Valuation__c/recordTypes/Residence_FI.recordType-meta.xml
<RecordType>
    <fullName>Residence_FI</fullName>
    <active>true</active>
    <label>Residence FI</label>
</RecordType>