force-app/main/default/objects/Valuation__c/recordTypes/Vehicle_Valuation.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Valuation</fullName>
    <active>true</active>
    <label>Vehicle Valuation</label>
</RecordType>