force-app/main/default/objects/Valuation__c/validationRules/BL_RCU_Activity_for_Sampled.validationRule-meta.xml
<ValidationRule>
    <fullName>BL_RCU_Activity_for_Sampled</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISPICKVAL(Loan_Application__r.LOB__c, &apos;BL&apos;),
							ISPICKVAL((Status__c) ,&apos;Sampled&apos;), 
							(ISBLANK(TEXT(PRIORVALUE(Result__c)))),
							(ISBLANK((PRIORVALUE(Comment__c)))),
							OR(ISCHANGED(Result__c),
										ISCHANGED(Comment__c)
									)
						)
		,true, false)</errorConditionFormula>
    <errorMessage>You cannot change below fields in the case of sampled.
* Result
* Manager Comments</errorMessage>
</ValidationRule>