force-app/main/default/objects/Valuation__c/validationRules/Comment_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Comment_Mandatory</fullName>
    <active>true</active>
    <description>On result change</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Result__c,&apos;&apos;)), ISCHANGED(Result__c), ISBLANK( Comment__c )  )</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>Please add comments</errorMessage>
</ValidationRule>